Overflow issue
Resolved the overflow issue on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,4 @@
 body {
-  width: 100%;
-  overflow-x: hidden;
   font-family: "Poppins", Arial, sans-serif; }
 
 .overflow-x {
