--- a/scss/custom/base.scss
+++ b/scss/custom/base.scss
@@ -1,6 +1,4 @@
 body {
-    width: 100%;
-    overflow-x: hidden;
     font-family: $base-font-family;
 }
 
